8237780: Shenandoah: More reliable nmethod verification

Reviewed-by: shade, zgu